UIUX-3050-UI alignment issue

--- a/src/components/Pages/CheckMyOffers/AnnualIncome/AnnualIncome.css
+++ b/src/components/Pages/CheckMyOffers/AnnualIncome/AnnualIncome.css
@@ -12,19 +12,10 @@
 	margin-bottom: 2% !important;
 }
 
-.setSlider {
-	margin-bottom: 0 !important;
-}
-
 .alignSlider {
 	margin-bottom: 7% !important;
 	text-align: center;
 }
-
-.setGreenColor {
-	color: green;
-}
-
 .smallText {
 	font-size: 0.8rem;
 	color: #fff;
