--- a/src/components/Pages/CheckMyOffers/CheckMyOffer.css
+++ b/src/components/Pages/CheckMyOffers/CheckMyOffer.css
@@ -49,20 +49,10 @@
 	margin-top: 5%;
 	margin-bottom: 2%;
 }
-
-.setSlider {
-	margin-bottom: 0 !important;
-}
-
 .alignSlider {
 	margin-bottom: 7% !important;
 	text-align: center;
 }
-
-.setGreenColor {
-	color: green;
-}
-
 .smallText {
 	font-size: 0.8rem;
 	color: #fff;
