--- a/src/components/Pages/CheckMyOffers/EmploymentStatus/EmploymentStatus.css
+++ b/src/components/Pages/CheckMyOffers/EmploymentStatus/EmploymentStatus.css
@@ -1,65 +1,47 @@
 .cardWOPadding {
 	text-align: center;
 }
-
 .cardWrapper {
 	margin-top: 5%;
 	margin-bottom: 2%;
 }
-
 .borrowCSS {
 	margin-top: 4% !important;
 	margin-bottom: 4% !important;
 }
-
-.setSlider {
-	margin-bottom: 0 !important;
-}
-
 .alignSlider {
 	margin-bottom: 7% !important;
 	text-align: center;
 }
-
-.setGreenColor {
-	color: green;
-}
-
 .smallText {
 	font-size: 0.8rem;
 	color: #fff;
 	font-family: "Muli", sans-serif;
 	font-weight: 300;
 }
-
 .alignText {
 	color: #595959;
 	font-size: 0.9rem;
 	margin-top: 2%;
 }
-
 .alignTextInsideCard {
 	padding-top: 2%;
 }
-
 .open {
 	height: 50px;
 	transition: 0.5s;
 }
-
 .close {
 	height: 0;
 	transition: 0.5s;
 	overflow: hidden;
 }
-
 .yellowText {
 	color: #ffbc23 !important;
 	margin-left: 10px;
 	font-size: x-large;
 	text-align: left;
 }
-
 .radioBlocked {
 	width: 100px;
 	border: 1px solid #0f4eb3;
@@ -74,13 +56,11 @@
 	padding-top: 5px;
 	padding-bottom: 5px;
 }
-
 .activeBorder {
 	background: #134ca5 !important;
 	box-shadow: 1px 0 2px #144ba1;
 	color: white !important;
 }
-
 .showMsg {
 	display: block;
 	margin: 0;
@@ -88,17 +68,17 @@
 	font-family: "Muli", sans-serif;
 	font-weight: 400;
 }
-
 .hideMsg {
 	display: none !important;
 }
-
+#employementWrap div p {
+	margin: 3px 0 0 0;
+}
 /*Animation*/
 .spinAnimation {
 	animation-name: rotation;
 	animation-duration: 3s;
 }
-
 @keyframes rotation {
 	from {
 		-webkit-transform: rotate(0deg);
@@ -108,12 +88,10 @@
 		-webkit-transform: rotate(359deg);
 	}
 }
-
 .slantDiv {
 	transform: skewX(-20deg);
 	margin-left: -3px;
 }
-
 .progress .determinate {
 	background-color: #ffbc25;
 	position: absolute;
@@ -123,85 +101,54 @@
 	-webkit-transition: width 0.3s linear;
 	transition: width 0.3s linear;
 }
-
-/* .progress {
-	position: relative;
-	display: block;
-	overflow: hidden;
-	width: 100%;
-
-	margin: 0.5rem 0 0.938rem 0;
-	border-radius: 10px 10px 0px 0px;
-	background-color: white;
-	height: 16px;
-	text-align: left !important;
-} */
-
 .mt-0 {
 	margin-top: 0 !important;
 }
-
 .det42 {
 	width: 42%;
 }
-
 .detNum42 {
 	padding-left: 42%;
 	font-weight: 600;
 	color: #134ca8;
 }
-
 .floatLeft {
 	text-align: left;
 }
-
 .padTop {
 	margin-top: 10px !important;
 }
-
 .borrowCSSLP {
 	font-size: 1.538rem !important;
 	font-weight: 400 !important;
 	line-height: 110% !important;
 }
-
 #employementWrap {
 	margin-bottom: 15px !important;
 	margin-top: 15px !important;
 }
-
 #employementWrap div label {
 	font-size: 0.968rem !important;
 	margin-left: -14px;
 }
-
-#employementWrap div div div {
+#employementWrap div div div,#employerPhoneWrap div div div input {
 	padding-bottom: 15px !important;
 }
-
 #employerPhoneWrap {
 	margin-top: 0px !important;
 	margin-bottom: 15px !important;
 }
-
 #employerPhoneWrap div div label {
 	font-size: 0.968rem !important;
 }
-
-#employerPhoneWrap div div div input {
-	padding-bottom: 15px !important;
-}
-
 #employmentStatusWrap {
 	border-radius: 10px !important;
 	width: 100%;
 	padding: 0px !important;
 }
-
 #employmentStatusWrap form {
 	border-radius: 4px !important;
 }
-
 #yearsAtEmployersSelect .subOption {
 	color: #171717 !important;
 	display: block;
